syntax = "proto3";
package pm;

service MetadataForStorage {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  Group group = 1;
  int64 leader_id = 3;
}

message HeartbeatResponse {}

service MetadataForProxy {
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {}
  rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse) {}
  rpc ListBucket(ListBucketRequest) returns (ListBucketResposne) {}
  rpc ListObject(ListObjectRequest) returns (ListObjectResponse) {}
  rpc RangeObject(RangeObjectRequest) returns (RangeObjectResponse) {}
  rpc CheckMeta(CheckMetaRequest) returns (CheckMetaResponse) {}
  rpc PutMeta(PutMetaRequest) returns (PutMetaResponse) {}
  rpc GetMeta(GetMetaRequest) returns (GetMetaResponse) {}
  rpc DeleteMeta(DeleteMetaRequest) returns (DeleteMetaResponse) {}
}

message CreateBucketRequest { string bucket = 1; }

message CreateBucketResponse {}

message ListBucketRequest {}

message ListBucketResposne { repeated string buckets = 1; }

message ListObjectRequest { string bucket = 1; }

message ListObjectResponse { repeated Metadata objects = 1; }

message Metadata {
  string key = 1;
  string name = 2;
  int64 size = 3;
  int64 created_time = 4;
}

message DeleteBucketRequest { string bucket = 1; }

message DeleteBucketResponse {}

message RangeObjectRequest {
  string bucket = 1;
  string from = 2;
  string to = 3;
}

message RangeObjectResponse { repeated string key = 1; }

message CheckMetaRequest {
  string bucket = 1;
  string name = 2;
  string key = 3;
  string tag = 4;
}

message CheckMetaResponse {
  bool existed = 1;
  Group group = 2;
}

message PutMetaRequest {
  string bucket = 1;
  string name = 2;
  string key = 3;
  string tag = 4;
  string address = 5;
  int64 volume_id = 6;
  int64 offset = 7;
  int64 size = 8;
  string group_id = 9;
}

message PutMetaResponse {}

message GetMetaRequest {
  string bucket = 1;
  string key = 2;
}

message GetMetaResponse {
  Group group = 1;
  string name = 2;
  int64 volume_id = 3;
  int64 offset = 4;
  int64 size = 5;
  int64 create_time = 6;
}

message DeleteMetaRequest {
  string bucket = 1;
  string key = 2;
}

message DeleteMetaResponse {}

message Group {
  string group_id = 1;
  repeated string addresses = 2;
}